@@ -1,3 +1,7 @@
+2011-05-27  Daiki Ueno  <ueno@unixuser.org>
+
+	* basic.c (check_pubkey_crypt): Add test data with invalid padding.
+
 2011-05-18  Daiki Ueno  <ueno@unixuser.org>
 
 	* basic.c (check_pubkey_crypt): Remove unused "unpad" flag.
